// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeatRow render vulnerability: BOTH 1`] = `
<GridRow
  className="seat-row"
  column={4}
  key="seat"
>
  <GridColumn
    key="WEST"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      WEST
    </Segment>
  </GridColumn>
  <GridColumn
    key="NORTH"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      NORTH
    </Segment>
  </GridColumn>
  <GridColumn
    key="EAST"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      EAST
    </Segment>
  </GridColumn>
  <GridColumn
    key="SOUTH"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      SOUTH
    </Segment>
  </GridColumn>
</GridRow>
`;

exports[`SeatRow render vulnerability: EW 1`] = `
<GridRow
  className="seat-row"
  column={4}
  key="seat"
>
  <GridColumn
    key="WEST"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      WEST
    </Segment>
  </GridColumn>
  <GridColumn
    key="NORTH"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      NORTH
    </Segment>
  </GridColumn>
  <GridColumn
    key="EAST"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      EAST
    </Segment>
  </GridColumn>
  <GridColumn
    key="SOUTH"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      SOUTH
    </Segment>
  </GridColumn>
</GridRow>
`;

exports[`SeatRow render vulnerability: NONE 1`] = `
<GridRow
  className="seat-row"
  column={4}
  key="seat"
>
  <GridColumn
    key="WEST"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      WEST
    </Segment>
  </GridColumn>
  <GridColumn
    key="NORTH"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      NORTH
    </Segment>
  </GridColumn>
  <GridColumn
    key="EAST"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      EAST
    </Segment>
  </GridColumn>
  <GridColumn
    key="SOUTH"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      SOUTH
    </Segment>
  </GridColumn>
</GridRow>
`;

exports[`SeatRow render vulnerability: NS 1`] = `
<GridRow
  className="seat-row"
  column={4}
  key="seat"
>
  <GridColumn
    key="WEST"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      WEST
    </Segment>
  </GridColumn>
  <GridColumn
    key="NORTH"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      NORTH
    </Segment>
  </GridColumn>
  <GridColumn
    key="EAST"
  >
    <Segment
      className="seat-cell"
      color={null}
      inverted={false}
    >
      EAST
    </Segment>
  </GridColumn>
  <GridColumn
    key="SOUTH"
  >
    <Segment
      className="seat-cell"
      color="red"
      inverted={true}
    >
      SOUTH
    </Segment>
  </GridColumn>
</GridRow>
`;
